--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -28,6 +28,11 @@ Grey dark 3: #999
     --color-grey-dark-1: #333;
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
+
+    --shadow-dark: 0 2rem 4rem rgba(0,0,0, .3);
+    --shadow-light: 0 2rem 4rem rgba(0,0,0, .06);
+
+    --line: 1px solid var(--color-grey-light-3)
 }
 *,
 *::after,
