--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -8,6 +8,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media only screen and (max-width: $bp-smallest){
+        order: 1;
+        flex: 0 0 100%;
+        background-color: var(--color-grey-light-2);
+    }
     
     &__input {
         font-family: inherit;
@@ -107,12 +113,23 @@
     font-size: 1.4rem;
     list-style: none;
     margin-top: 3.5rem;
-
+    
+    @media only screen and (max-width: $bp-medium){
+        display: flex;
+        margin: 0;
+    }
     &__item {
         position: relative;
 
         &:not(:last-child) {
             margin-bottom: .5rem;
+        }
+
+            
+        @media only screen and (max-width: $bp-medium){
+            flex: 1;
+            margin-bottom: 0 !important;
+            
         }
     }
     &__item::before {
@@ -147,6 +164,16 @@
         align-items: center;
         position: relative;
         z-index: 10;
+
+        
+        @media only screen and (max-width: $bp-medium){
+            justify-content: center;
+            padding: 2rem;
+        }
+        @media only screen and (max-width: $bp-small){
+            flex-direction: column;
+            padding: 1.5rem .5rem;
+        }
     }
 
     &__icon {
@@ -154,6 +181,12 @@
         height: 1.75rem;
         margin-right: 2rem;
         fill: currentColor;
+        @media only screen and (max-width: $bp-small){
+            margin-right: 0;
+            margin-bottom: 7px;
+            width: 1.5rem;
+            height: 1.5rem;
+        }
     }
 }
 
@@ -162,6 +195,11 @@
     font-size: 1.2rem;
     text-align: center;
     padding: 2.5rem;
+
+    
+    @media only screen and (max-width: $bp-medium){
+        display: none;
+    }
 }
 
 .gallery {
@@ -183,6 +221,10 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
+        @media only screen and (max-width: $bp-small){
+            font-size: 1.8rem;
+            padding: 1.25 2rem;
+        }
     }
     &__stars {
         margin-right: auto;
@@ -215,15 +257,24 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        @media only screen and (max-width: $bp-small){
+            padding: 0 1.5rem;
+        }
     }
     &__rating-average {
         font-size: 2.25rem;
         font-weight: 300;
         margin-bottom: -.4rem;
+        @media only screen and (max-width: $bp-small){
+            font-size: 1.8rem;
+        }
     }
     &__rating-count {
         font-size: .8rem;
         text-transform: uppercase;
+        @media only screen and (max-width: $bp-small){
+            font-size: .5rem;
+        }
     }
 }
 
@@ -299,14 +350,16 @@
         margin-right: 0.7rem;
 
         
-        // background-image: url(../img/chevron-thin-right.svg);
-        // background-size: cover;
-
-        background-color: var(--color-primary);
-        -webkit-mask-image: url(../img/chevron-thin-right.svg);
-        -webkit-mask-size: cover;
-        mask-image: url(../img/chevron-thin-right.svg);
-        mask-size: cover;
+        background-image: url(../img/chevron-thin-right.svg);
+        background-size: cover;
+        @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+            background-color: var(--color-primary);
+            -webkit-mask-image: url(../img/chevron-thin-right.svg);
+            -webkit-mask-size: cover;
+            mask-image: url(../img/chevron-thin-right.svg);
+            mask-size: cover;
+            background-image: none;
+        }
     }
 }
 
@@ -315,7 +368,9 @@
     color: var(--color-grey-dark-3);
     display: flex;
     align-items: center;
-
+    &__friends {
+        display: flex;
+    }
     &__photo {
         box-sizing: content-box;
         height: 4rem;
@@ -323,7 +378,7 @@
         border-radius: 50%;
         border: 3px solid #fff;
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -2rem;
         }
     }
 
@@ -339,6 +394,11 @@
     margin-bottom: 3rem;
     position: relative;
     overflow: hidden;
+
+    
+    @media only screen and (max-width: $bp-medium){
+        padding: 2rem;
+    }
 
     &__text {
         z-index: 10;
@@ -390,7 +450,9 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
-
+    @media only screen and (max-width: $bp-medium){
+        padding: 2.5rem 0;
+    }
     &__booknow {
         font-size: 2rem;
         font-weight: 300;
